[gd_scene load_steps=88 format=3 uid="uid://3w7nyffxax6l"]

[ext_resource type="Script" uid="uid://cqtr1uvuiq3w8" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://d0djok8y1fmuk" path="res://Assets/Player/Player Front Sheet.png" id="1_v0iea"]
[ext_resource type="Texture2D" uid="uid://bkn51u0pped7v" path="res://Assets/Player/Player Side Sheet.png" id="3_vgqql"]
[ext_resource type="Texture2D" uid="uid://d2j6cf5ctielj" path="res://Assets/Player/Player Back Sheet.png" id="4_fkybt"]
[ext_resource type="Script" uid="uid://udoy456puvdv" path="res://GUI/hp.gd" id="5_x3wgy"]
[ext_resource type="Script" uid="uid://bjcpoy68o5ogk" path="res://GUI/stamina.gd" id="6_3smsa"]
[ext_resource type="Texture2D" uid="uid://b6wahuhdh6mbg" path="res://Assets/Icons/shard_01i.png" id="7_tx1dd"]
[ext_resource type="FontFile" uid="uid://lxeddhw7kru1" path="res://Assets/Font/ARCADECLASSIC.TTF" id="8_gymyn"]
[ext_resource type="Texture2D" uid="uid://c4xvnv66nrhov" path="res://Assets/Icons/potion_02c.png" id="9_pu2lt"]
[ext_resource type="Texture2D" uid="uid://c165g8lnh74xn" path="res://Assets/Icons/potion_02b.png" id="10_ukyrk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cvnsp"]
radius = 5.0
height = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("1_v0iea")
region = Rect2(96, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("1_v0iea")
region = Rect2(144, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("1_v0iea")
region = Rect2(192, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("1_v0iea")
region = Rect2(240, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("3_vgqql")
region = Rect2(0, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_vgqql")
region = Rect2(48, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_vgqql")
region = Rect2(96, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_vgqql")
region = Rect2(144, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_vgqql")
region = Rect2(192, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("3_vgqql")
region = Rect2(240, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("4_fkybt")
region = Rect2(0, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("4_fkybt")
region = Rect2(48, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("4_fkybt")
region = Rect2(96, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("4_fkybt")
region = Rect2(144, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("4_fkybt")
region = Rect2(192, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("4_fkybt")
region = Rect2(240, 88, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 132, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("1_v0iea")
region = Rect2(96, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("1_v0iea")
region = Rect2(144, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("1_v0iea")
region = Rect2(192, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("1_v0iea")
region = Rect2(240, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxox"]
atlas = ExtResource("1_v0iea")
region = Rect2(288, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("1_v0iea")
region = Rect2(336, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("1_v0iea")
region = Rect2(384, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("1_v0iea")
region = Rect2(432, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("1_v0iea")
region = Rect2(480, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqm"]
atlas = ExtResource("1_v0iea")
region = Rect2(528, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("1_v0iea")
region = Rect2(576, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("1_v0iea")
region = Rect2(624, 176, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmr2m"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3m3"]
atlas = ExtResource("1_v0iea")
region = Rect2(96, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vlem"]
atlas = ExtResource("1_v0iea")
region = Rect2(144, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eeqe"]
atlas = ExtResource("1_v0iea")
region = Rect2(192, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x828"]
atlas = ExtResource("1_v0iea")
region = Rect2(240, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1k8q"]
atlas = ExtResource("3_vgqql")
region = Rect2(0, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6mvm"]
atlas = ExtResource("3_vgqql")
region = Rect2(48, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_57lvd"]
atlas = ExtResource("3_vgqql")
region = Rect2(96, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie7r7"]
atlas = ExtResource("3_vgqql")
region = Rect2(144, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq3lt"]
atlas = ExtResource("3_vgqql")
region = Rect2(192, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pukcj"]
atlas = ExtResource("3_vgqql")
region = Rect2(240, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_1htnp"]
atlas = ExtResource("4_fkybt")
region = Rect2(0, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_m376e"]
atlas = ExtResource("4_fkybt")
region = Rect2(48, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b312"]
atlas = ExtResource("4_fkybt")
region = Rect2(96, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_lisdf"]
atlas = ExtResource("4_fkybt")
region = Rect2(144, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1x1j"]
atlas = ExtResource("4_fkybt")
region = Rect2(192, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8b32"]
atlas = ExtResource("4_fkybt")
region = Rect2(240, 0, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("1_v0iea")
region = Rect2(0, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("1_v0iea")
region = Rect2(48, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("1_v0iea")
region = Rect2(96, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("1_v0iea")
region = Rect2(144, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("1_v0iea")
region = Rect2(192, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("1_v0iea")
region = Rect2(240, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("1_v0iea")
region = Rect2(288, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("1_v0iea")
region = Rect2(336, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj1g2"]
atlas = ExtResource("3_vgqql")
region = Rect2(0, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_usbl8"]
atlas = ExtResource("3_vgqql")
region = Rect2(48, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtg1u"]
atlas = ExtResource("3_vgqql")
region = Rect2(96, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuaet"]
atlas = ExtResource("3_vgqql")
region = Rect2(144, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqbau"]
atlas = ExtResource("3_vgqql")
region = Rect2(192, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5f5t"]
atlas = ExtResource("3_vgqql")
region = Rect2(240, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvbpb"]
atlas = ExtResource("3_vgqql")
region = Rect2(288, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_sscpr"]
atlas = ExtResource("3_vgqql")
region = Rect2(336, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_by7i4"]
atlas = ExtResource("4_fkybt")
region = Rect2(0, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uvy8"]
atlas = ExtResource("4_fkybt")
region = Rect2(48, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss172"]
atlas = ExtResource("4_fkybt")
region = Rect2(96, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmelf"]
atlas = ExtResource("4_fkybt")
region = Rect2(144, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjdqd"]
atlas = ExtResource("4_fkybt")
region = Rect2(192, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_feq18"]
atlas = ExtResource("4_fkybt")
region = Rect2(240, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcnj3"]
atlas = ExtResource("4_fkybt")
region = Rect2(288, 44, 46, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsob3"]
atlas = ExtResource("4_fkybt")
region = Rect2(336, 44, 46, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_gymyn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}],
"loop": false,
"name": &"attack_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}],
"loop": false,
"name": &"attack_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}],
"loop": false,
"name": &"attack_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}],
"loop": false,
"name": &"death",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmr2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vlem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eeqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x828")
}],
"loop": true,
"name": &"idle_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1k8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6mvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57lvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie7r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq3lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pukcj")
}],
"loop": true,
"name": &"idle_side",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1htnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m376e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b312")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lisdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1x1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8b32")
}],
"loop": true,
"name": &"idle_up",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj1g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usbl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtg1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuaet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqbau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5f5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvbpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sscpr")
}],
"loop": true,
"name": &"walk_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_by7i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uvy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss172")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmelf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjdqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feq18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcnj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsob3")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")
SPEED = 110
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_gymyn")
animation = &"attack_down"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HP" type="ColorRect" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -67.0
offset_right = 100.0
offset_bottom = -57.0
grow_vertical = 0
color = Color(0.227451, 0.223529, 0.207843, 0.415686)
script = ExtResource("5_x3wgy")

[node name="Value" type="ColorRect" parent="UI/HP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -4.0
offset_right = 49.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.643137, 0.870588, 0.47451, 1)

[node name="Stamina" type="ColorRect" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -57.0
offset_right = 100.0
offset_bottom = -47.0
grow_vertical = 0
color = Color(0.227451, 0.223529, 0.207843, 0.415686)
script = ExtResource("6_3smsa")

[node name="Value" type="ColorRect" parent="UI/Stamina"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -4.0
offset_right = 49.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.486275, 0.619608, 1)

[node name="AmmoAmount" type="ColorRect" parent="UI"]
offset_left = 5.0
offset_top = 8.0
offset_right = 45.0
offset_bottom = 28.0
color = Color(0.227451, 0.223529, 0.207843, 0.415686)

[node name="Icon" type="Sprite2D" parent="UI/AmmoAmount"]
position = Vector2(10, 10)
texture = ExtResource("7_tx1dd")

[node name="Value" type="Label" parent="UI/AmmoAmount"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_gymyn")
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthAmount" type="ColorRect" parent="UI"]
offset_left = 50.0
offset_top = 8.0
offset_right = 90.0
offset_bottom = 28.0
color = Color(0.227451, 0.223529, 0.207843, 0.415686)

[node name="Icon" type="Sprite2D" parent="UI/HealthAmount"]
position = Vector2(10, 10)
texture = ExtResource("9_pu2lt")

[node name="Value" type="Label" parent="UI/HealthAmount"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_gymyn")
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaAmount" type="ColorRect" parent="UI"]
offset_left = 96.0
offset_top = 8.0
offset_right = 136.0
offset_bottom = 28.0
color = Color(0.227451, 0.223529, 0.207843, 0.415686)

[node name="Icon" type="Sprite2D" parent="UI/StaminaAmount"]
position = Vector2(10, 10)
texture = ExtResource("10_ukyrk")

[node name="Value" type="Label" parent="UI/StaminaAmount"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_gymyn")
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XP" type="ColorRect" parent="UI"]
offset_left = 225.0
offset_top = 142.0
offset_right = 315.0
offset_bottom = 157.0
color = Color(0.227451, 0.223529, 0.207843, 0.415686)

[node name="Label" type="Label" parent="UI/XP"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -12.0
offset_right = 25.0
offset_bottom = 12.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_gymyn")
theme_override_font_sizes/font_size = 15
text = "XP"

[node name="Value" type="Label" parent="UI/XP"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -12.0
offset_right = -4.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_gymyn")
theme_override_font_sizes/font_size = 15
text = "0/100"
horizontal_alignment = 2

[node name="Level" type="ColorRect" parent="UI"]
offset_left = 225.0
offset_top = 160.0
offset_right = 315.0
offset_bottom = 175.0
color = Color(0.227451, 0.223529, 0.207843, 0.415686)

[node name="Label" type="Label" parent="UI/Level"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -12.0
offset_right = 25.0
offset_bottom = 12.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_gymyn")
theme_override_font_sizes/font_size = 15
text = "Level"

[node name="Value" type="Label" parent="UI/Level"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -12.0
offset_right = -4.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_gymyn")
theme_override_font_sizes/font_size = 15
text = "1
"
horizontal_alignment = 2

[connection signal="health_updated" from="." to="UI/HP" method="_on_player_health_updated"]
[connection signal="stamina_updated" from="." to="UI/Stamina" method="_on_player_stamina_updated"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
